--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -6,7 +6,7 @@
     <ul class="pt-5">
       <li><a href="/integrantes">Integrantes</a></li>
       <li><a href="/proyectos">Proyectos</a></li>
-      <li><a href="https://mexic0de-blog.vercel.app/">Blog</a></li>
+      <li><a href="https://blog.mexic0de.page/">Blog</a></li>
     </ul>
   </nav>
 </header>
