--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -39,11 +39,11 @@ import Footer from "../components/Footer.astro";
             Repositorio de GitHub
           </a>
           <a
-            href="https://mexic0de-blog.vercel.app/"
+            href="https://blog.mexic0de.page/"
             class="other-button"
             target="_blank"
           >
-            Pagina Web MEXIC0DE-TUTO
+            BLog Web MEXIC0DE-TUTO
           </a>
         </div>
       </div>
@@ -101,7 +101,7 @@ import Footer from "../components/Footer.astro";
             GitHub
           </a>
           <a
-            href="https://mexic0de-blog.vercel.app/"
+            href="https://blog.mexic0de.page/"
             class="other-button"
             target="_blank"
           >
