--- a/src/pages/integrantes.astro
+++ b/src/pages/integrantes.astro
@@ -29,7 +29,7 @@ import TeamCard from "../components/TeamCard.astro";
           name="Jose Angel Arjona Matheis"
           img={Chepe}
           rol="FrontEnd Developer"
-          path="./jaam"
+          path="https://arjmath.vercel.app/"
           color="#26ae5e"
           skills={["UI/UX", "Front End Development", "Web Development"]}
         />
