--- a/src/pages/jaam.astro
+++ b/src/pages/jaam.astro
@@ -8,10 +8,9 @@
     </script>
   </head>
   <body>
-    <h1>👋 Hola, La direccion de esta pagina ha cambiado</h1>
+    <h1>👋 Hola, La dirección de esta página ha cambiado</h1>
     <p>
-      La direccion de esta pagina ha cambiado. En caso de no ser dirgido
-      automaticamente preciona el boton de abajo
+      La dirección de esta página ha cambiado. En caso de no ser dirigido automáticamente presiona el botón de abajo
     </p>
     <a href="https://arjmath.vercel.app/">Ir al nuevo sitio</a>
   </body>
